[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/map/property.gd" type="Script" id=1]
[ext_resource path="res://assets/images/settlement.png" type="Texture" id=2]
[ext_resource path="res://assets/images/city.png" type="Texture" id=3]
[ext_resource path="res://assets/images/star_particle.png" type="Texture" id=4]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 83.37
flag_disable_z = true
direction = Vector3( 0, -10, 0 )
spread = 52.38
gravity = Vector3( 0, -90, 0 )
initial_velocity = 336.63
angular_velocity = 114.06
angular_velocity_random = 0.23
orbit_velocity = 0.0
orbit_velocity_random = 0.1
linear_accel = 29.7
scale = 0.5
scale_random = 1.0
hue_variation = -1.0
hue_variation_random = 1.0

[node name="Property" type="Node2D"]
script = ExtResource( 1 )

[node name="SettlementTexture" type="TextureRect" parent="."]
margin_left = -25.0
margin_top = -38.0
margin_right = 25.0
margin_bottom = 12.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CityTexture" type="TextureRect" parent="."]
visible = false
margin_left = -41.0
margin_top = -43.0
margin_right = 39.0
margin_bottom = 17.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UpgradeParticle" type="Particles2D" parent="."]
position = Vector2( 1.90735e-06, 7 )
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 100
speed_scale = 1.5
explosiveness = 0.32
process_material = SubResource( 1 )
texture = ExtResource( 4 )
